# minesploit

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  PRESENTATION.md  README.md  justfile  pyproject.toml  tests.ms  tombi.toml
examples/: .gitignore  README.md  cpu_miner_example.py  mining_example.py  mining_service_scanner.py  sniffer_stratum.py  stratum_client_example.py  stratum_hijack.py  stratum_logger.py  stratum_server_example.py  stratum_share_validator.py  stratum_steal_shares_proxy.py
examples/legacy/: stratum_client_example.py  stratum_share_validator.py  stratum_steal_shares_proxy.py
minesploit/: __init__.py  __main__.py  database.py  framework.py
minesploit/exploits/: __init__.py  cve_2013_stratum_duplicate_shares.py  cve_2015_20111_miniupnpc_rce.py  cve_2016_stratum_mass_duplicate.py  cve_2017_18350_socks_overflow.py  cve_2018_17144_inflation.py  cve_2018_cgminer_api_overflow.py  cve_2018_cgminer_path_traversal.py  cve_2024_52912_timestamp_overflow.py  cve_2024_52913_tx_censorship.py  cve_2024_52914_orphan_dos.py  cve_2024_52915_inv_memory_dos.py  cve_2024_52919_addr_spam_crash.py  cve_2024_52920_getdata_cpu_dos.py  cve_2024_52921_mutated_blocks.py  cve_2024_blocktxn_dos.py  cve_2025_46598_cpu_tx_dos.py  cve_2025_54604_disk_fill_spoofed.py  cve_2025_54605_disk_fill_blocks.py
minesploit/protocols/: mining.py
minesploit/protocols/p2pool/: __init__.py  scanner.py
minesploit/protocols/stratum/: __init__.py  client.py  proxy.py  server.py  sniffer.py
minesploit/protocols/stratumv2/: __init__.py  client.py  server.py  translator.py
minesploit/repl/: __init__.py  __main__.py  shell.py
minesploit/utils/: __init__.py  crypto.py  logger.py  miner.py  networking.py  parser.py  scanner.py
repl/: __init__.py  shell.py
tests/: test_database.py  test_framework.py  test_networking.py  test_parser.py  test_repl.py
