[project]
name = "minesploit"
version = "0.1.0"
description = "Bitcoin mining security research framework for white hat hackers"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "Minesploit Contributors", email = "contact@minesploit.io" }
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Security Professionals",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "base58>=1.0.0",
  "python-bitcoinlib>=0.10.0",
  "requests>=2.28.0",
  "sv2python",
]

[tool.uv]
sources = { sv2python = { path = "vendors/sv2-ffi/python", editable = true } }

[tool.setuptools]
py-modules = ["sv2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["minesploit*", "repl*"]

[tool.setuptools.package-dir]
sv2 = "vendors/sv2-ffi/python"
